syntax = "proto3";

import "google/protobuf/wrappers.proto";

package taska.proto.board;

message CreateBoardReq {
  string id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
}
message CreateBoardRes {
}
message ArchiveBoardReq {
  string id = 1;
}
message ArchiveBoardRes {
}
message UnArchiveBoardReq {
  string id = 1;
}
message UnArchiveBoardRes {
}
message UpdateBoardReq {
  string id = 1;
  repeated Update updates = 2;

  message Update {
    oneof update {
      UpdateTitle title = 1;
      UpdateDescription description = 2;
    }
  }
  message UpdateTitle {
    string title = 1;
  }
  message UpdateDescription {
    google.protobuf.StringValue description = 1;
  }

}
message UpdateBoardRes {
}

service BoardService {
  rpc Create (CreateBoardReq) returns (CreateBoardRes);
  rpc Archive (ArchiveBoardReq) returns (ArchiveBoardRes);
  rpc UnArchive (UnArchiveBoardReq) returns (UnArchiveBoardRes);
  rpc Update (UpdateBoardReq) returns (UpdateBoardRes);
}